--- a/Portfolio2.0-main/package.json
+++ b/Portfolio2.0-main/package.json
@@ -13,15 +13,19 @@
     "@types/react-router-dom": "^5.3.3",
     "@types/styled-components": "^5.1.26",
     "axios": "^1.2.1",
+    "particles.js": "^2.0.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-github-calendar": "^3.4.0",
+    "react-particles": "^2.12.2",
     "react-router-dom": "^6.6.0",
     "react-scripts": "5.0.1",
     "react-swipeable": "^7.0.0",
     "react-toastify": "^9.1.2",
-    "styled-components": "^5.3.6",
+    "react-tsparticles": "^2.12.2",
+    "styled-components": "^5.3.11",
     "swiper": "^9.1.1",
+    "tsparticles": "^2.12.0",
     "typescript": "^4.9.4",
     "web-vitals": "^2.1.4"
   },
