--- a/Portfolio2.0-main/package.json
+++ b/Portfolio2.0-main/package.json
@@ -13,10 +13,15 @@
     "@types/react-router-dom": "^5.3.3",
     "@types/styled-components": "^5.1.26",
     "axios": "^1.2.1",
+    "custom-cursor-react": "^1.0.5",
+    "i18next": "^23.7.7",
+    "i18next-browser-languagedetector": "^7.1.0",
+    "next-themes": "^0.2.1",
     "particles.js": "^2.0.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-github-calendar": "^3.4.0",
+    "react-i18next": "^13.5.0",
     "react-particles": "^2.12.2",
     "react-router-dom": "^6.6.0",
     "react-scripts": "5.0.1",
@@ -52,5 +57,9 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "json-loader": "^0.5.7",
+    "json5-loader": "^4.0.1"
   }
 }
